Foi implementado o swagger e feito ajustes para melhor funcionamento do swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.try-it-out-enabled=true
+springdoc.info.title=API de Super-Heróis
+springdoc.info.version=v1.0.0
+springdoc.info.description=API REST para realizar um CRUD de Super-Heróis.
