--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=super-heroi-api
 
-spring.datasource.url=jdbc:mysql://localhost:3306/superheroes_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/superheroes_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:password}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
